Site     - fix bug resize 3d home page     - fix bug selection on mobile mode in online game

--- a/docker-compose/requirements/nginx/static/style/game/games.css
+++ b/docker-compose/requirements/nginx/static/style/game/games.css
@@ -6,7 +6,7 @@
 /*   By: edbernar <edbernar@student.42angouleme.    +#+  +:+       +#+        */
 /*                                                +#+#+#+#+#+   +#+           */
 /*   Created: 2024/08/20 11:23:41 by edbernar          #+#    #+#             */
-/*   Updated: 2024/09/27 21:05:45 by edbernar         ###   ########.fr       */
+/*   Updated: 2024/09/27 21:59:51 by edbernar         ###   ########.fr       */
 /*                                                                            */
 /* ************************************************************************** */
 
@@ -124,6 +124,10 @@ body {
 	position: absolute;
 	left: 50px;
 	bottom: 50px;
+	user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    touch-action: none;
 }
 
 
@@ -133,6 +137,10 @@ body {
 	flex-direction: column;
 	right: 50px;
 	bottom: 50px;
+	user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    touch-action: none;
 }
 
 .gamePad .buttonGamePad
@@ -144,20 +152,36 @@ body {
 	background-size: 80% 80%;
 	background-position: center;
 	border: none;
+	user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    touch-action: none;
 }
 
 .gamePadLeft #padRight {
 	margin-left: 50px;
 	transform: rotate(180deg);
+	user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    touch-action: none;
 }
 
 .gamePadRight #padTop {
 	margin-bottom: 20px;
 	transform: rotate(90deg);
+	user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    touch-action: none;
 }
 
 .gamePadRight #padBottom {
 	transform: rotate(270deg);
+	user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    touch-action: none;
 }
 
 #canvasMultiGameOnline {
